# session_protobuf

./: .actrc  .gitignore  .gitmodules  ACT_TESTING.md  CMakeLists.txt  Readme.md  build-and-generate.bat  build-and-generate.sh  build-rust-only.bat  build-universal.sh  build.bat  build.sh  example_usage.rs  generate-bindings.sh  test-with-act.sh  validate-setup.sh
.github/act/: Dockerfile.ubuntu-cmake
.github/workflows/: build-and-release.yml  test-build-offline.yml  test-build.yml
proto/: README.md  color.proto
proto/user/: README.md  color.proto  point.proto
src/cmake/: protobuf-configure-target.cmake
src/third_parties/: CMakeLists.txt
